# FlymasterDump

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  DumpTask.cpp  DumpTask.h  FlightListTask.cpp  FlightListTask.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Model.cpp  Model.h  Property.h  QtCallback.cpp  QtCallback.h  TaskProcessor.cpp  TaskProcessor.h  TaskProcessor.test.cpp  TaskProgressDialog.cpp  TaskProgressDialog.h  main.cpp
progress/: CMakeLists.txt  Callback.cpp  Callback.h  Callback.test.cpp
scripts/: thirdparty.cmake
serialPortCom/: CMakeLists.txt  IgcFactory.cpp  IgcFactory.h  IgcFile.cpp  IgcFile.h  Request.cpp  Request.h  SerialPort.cpp  SerialPort.h
serialPortCom/ascii/: FlightMetaInfo.cpp  FlightMetaInfo.h  FlightMetaInfo.test.cpp  NmeaSentence.cpp  NmeaSentence.h  NmeaSentence.test.cpp  StringUtils.cpp  StringUtils.h  StringUtils.test.cpp
serialPortCom/binary/: BinaryBlock.cpp  BinaryBlock.h  BinaryBlock.test.cpp  Convert.h  Convert.test.cpp  FlightInformationRecord.cpp  FlightInformationRecord.h  KeyTrackPositionRecord.cpp  KeyTrackPositionRecord.h  TrackPositionRecordDeltas.cpp  TrackPositionRecordDeltas.h
